SigmaCodebackup3rdSep/objects/Sigma_Linkage_Item__c.object
<CustomObject>
    <fields>
        <fullName>Activity_Date_Time__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Activity Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Alternate_Unit_Price__c</fullName>
        <description>this field will contain the unit price of the source SL in the destination SL during stock movement</description>
        <label>Alternate Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Buying_Unit_Price__c</fullName>
        <formula>IF( ( Alternate_Unit_Price__c = 0 ) , Sigma_Linkage__r.Unit_Cost__c ,  Alternate_Unit_Price__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Buying Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Inventory_Location_Product_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory Location Product Line Item</label>
        <referenceTo>Inventory_Location_Product_Line_Item__c</referenceTo>
        <relationshipLabel>Sigma Linkage Items</relationshipLabel>
        <relationshipName>Sigma_Linkage_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Net_Buying_Unit_Price__c</fullName>
        <formula>IF(  Alternate_Unit_Price__c = 0  , Sigma_Linkage__r.Net_Unit_Cost__c , Alternate_Unit_Price__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Buying Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Line</label>
        <referenceTo>Product_Order_Price_Book__c</referenceTo>
        <relationshipLabel>Sigma Linkage Items</relationshipLabel>
        <relationshipName>Sigma_Linkage_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Products__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Product</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Sigma Linkage Items</relationshipLabel>
        <relationshipName>Sigma_Linkage_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Package_Product_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Package Product Line Item</label>
        <referenceTo>Package_Product_Line_Item__c</referenceTo>
        <relationshipLabel>Sigma Linkage Items</relationshipLabel>
        <relationshipName>Sigma_Linkage_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Sigma Linkage Items</relationshipLabel>
        <relationshipName>Sigma_Linkage_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Profit_or_Loss_Amount_Net__c</fullName>
        <formula>IF(
(ISPICKVAL( Type__c , &apos;Package&apos;) ||  ISPICKVAL( Type__c , &apos;Shipment&apos;) || ISPICKVAL( Type__c , &apos;Delivered&apos;) || ISPICKVAL( Type__c ,&apos;Work Order Completed&apos;)) ,
 ( Total_Sales_Value__c  -  Total_Buying_value__c ),
 (0) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profit or Loss Amount (Net )</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Purchase_Order_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchase Order Product</label>
        <referenceTo>Purchase_Order_Product__c</referenceTo>
        <relationshipLabel>Sigma Linkage Items</relationshipLabel>
        <relationshipName>Sigma_Linkage_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SAP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Stock Adjustment Product</label>
        <referenceTo>Stock_Adjustment_Product__c</referenceTo>
        <relationshipLabel>Sigma Linkage Items</relationshipLabel>
        <relationshipName>Sigma_Linkage_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Stock Movement Product</label>
        <referenceTo>Stock_Moment_Product__c</referenceTo>
        <relationshipLabel>Sigma Linkage Items</relationshipLabel>
        <relationshipName>Sigma_Linkage_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Allocation_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Order Allocation Line Item</label>
        <referenceTo>Sales_Order_Allocation_Line_Item__c</referenceTo>
        <relationshipLabel>Sigma Linkage Items</relationshipLabel>
        <relationshipName>Sigma_Linkage_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Unit_Price__c</fullName>
        <label>Sales Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Shipment_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipment Product</label>
        <referenceTo>Shipment_Products__c</referenceTo>
        <relationshipLabel>Sigma Linkage Items</relationshipLabel>
        <relationshipName>Sigma_Linkage_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sigma_Linkage__c</fullName>
        <label>Sigma Linkage</label>
        <referenceTo>Sigma_Linkage__c</referenceTo>
        <relationshipLabel>Sigma Linkage Items</relationshipLabel>
        <relationshipName>Sigma_Linkage_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Stock_Receiving_Product_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Stock Receiving Product Line Item</label>
        <referenceTo>Stock_Receiving_Product_Line_Item__c</referenceTo>
        <relationshipLabel>Sigma Linkage Items</relationshipLabel>
        <relationshipName>Sigma_Linkage_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Buying_value__c</fullName>
        <formula>Net_Buying_Unit_Price__c  *  Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Buying value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Sales_Value__c</fullName>
        <label>Total Sales Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Stock Receiving</fullName>
                </value>
                <value>
                    <fullName>Inventory</fullName>
                </value>
                <value>
                    <fullName>Allocation</fullName>
                </value>
                <value>
                    <fullName>Package</fullName>
                </value>
                <value>
                    <fullName>Shipment</fullName>
                </value>
                <value>
                    <fullName>Stock Decreased</fullName>
                </value>
                <value>
                    <fullName>Stock OUT</fullName>
                </value>
                <value>
                    <fullName>Stock IN</fullName>
                </value>
                <value>
                    <fullName>Stock Increased</fullName>
                </value>
                <value>
                    <fullName>Stock Produced</fullName>
                </value>
                <value>
                    <fullName>Additional Products</fullName>
                </value>
                <value>
                    <fullName>Packaging Materials</fullName>
                </value>
                <value>
                    <fullName>Product Components</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
                <value>
                    <fullName>Work Order Completed</fullName>
                </value>
                <value>
                    <fullName>POS</fullName>
                    <isActive>false</isActive>
                    <label>POS</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Sigma Linkage Item</label>
    <nameField>
        <displayFormat>SLLI-{00000}</displayFormat>
        <label>Sigma Linkage Items Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sigma Linkage Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>